modified easywire.html file

--- a/easywire.html
+++ b/easywire.html
@@ -87,7 +87,7 @@
                         </div>
                         
                         <div id="pelham">
-                            Pelham mutai
+                            Pelham Mutai
                         </div>
                     </div>
                         <div id="name">
@@ -95,7 +95,7 @@
                                <img src="ICONS/person.jpg " width="40px" height="40px">
                             </div>
                             <div id="money-details">
-                                 <span>Good morning Pelham mutai</span><br><img src="ICONS/street.png" width="17px" height="10px">&nbsp<span9> Karuna street
+                                 <span>Good morning Pelham Mutai</span><br><img src="ICONS/street.png" width="17px" height="10px">&nbsp<span9> Karuna street
                                  <img src="ICONS/veriviedacc.webp"
                                  width="12px" height="12px"><span9>verified account</span9>
                             </div>
