--- a/easywire.html
+++ b/easywire.html
@@ -43,7 +43,7 @@
                     <a href="recipients">
                     <div class="recipients2">
                         <div><img src="ICONS/recipients.png" width="20px" height="20px"></div>
-                       <div style="padding: 5px;">Recipients</div>
+                       <div style="padding: 5px;">Recipients and sender</div>
                     </div>
                     </a>
                     <a href="reports">
